Fix the input lenght on mobile

--- a/src/sass/pages/_donate.scss
+++ b/src/sass/pages/_donate.scss
@@ -96,6 +96,7 @@
       border-radius: 0.3rem;
       font-family: "Ubuntu", sans-serif;
       font-size: 1.4rem;
+      max-width: 100%
     }
   }
   &__donation {
